[gd_scene load_steps=18 format=3 uid="uid://b6nvq3vhkeuyv"]

[ext_resource type="Script" path="res://Michis/Scripts/Michi.gd" id="1_atowx"]
[ext_resource type="Texture2D" uid="uid://bb363ufh2dda5" path="res://Michis/Assets/Categoría 4/Neon/neonFrente.png" id="2_0i3gk"]
[ext_resource type="Texture2D" uid="uid://d0jwmhbo5hw05" path="res://Michis/Assets/Categoría 4/Neon/neonLateral.png" id="3_12ynm"]
[ext_resource type="Texture2D" uid="uid://c8wcc158uhib8" path="res://Michis/Assets/Categoría 4/Neon/neonEspalda.png" id="4_qs8hr"]
[ext_resource type="Texture2D" uid="uid://cgkrqkv8qr6we" path="res://Michis/Status/Assets/statusWhite.png" id="5_dm0pr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ax23c"]
atlas = ExtResource("2_0i3gk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx327"]
atlas = ExtResource("2_0i3gk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbj5c"]
atlas = ExtResource("2_0i3gk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nkpd"]
atlas = ExtResource("2_0i3gk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85exq"]
atlas = ExtResource("3_12ynm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lfj3"]
atlas = ExtResource("3_12ynm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6tbe"]
atlas = ExtResource("4_qs8hr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seuyr"]
atlas = ExtResource("4_qs8hr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sirv6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax23c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx327")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbj5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nkpd")
}],
"loop": true,
"name": &"WalkingDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85exq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lfj3")
}],
"loop": true,
"name": &"WalkingSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seuyr")
}],
"loop": true,
"name": &"WalkingUp",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gei1d"]
radius = 17.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7oxml"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_co7id"]
radius = 12.0

[node name="Michi1" type="CharacterBody2D"]
script = ExtResource("1_atowx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sirv6")
animation = &"WalkingUp"

[node name="StatusGood" type="Sprite2D" parent="."]
position = Vector2(-17, -36)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_dm0pr")
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(1, 5)
shape = SubResource("CapsuleShape2D_gei1d")

[node name="CollisionPolygon2DNormal" type="CollisionPolygon2D" parent="."]
position = Vector2(-38, -32)
polygon = PackedVector2Array(21, 13, 16.4403, 20.8759, 10, 32, 10, 50, 20, 58, 42, 58, 48, 49, 47, 45, 64, 32, 62, 25, 57, 24, 54, 34, 49, 36, 38, 12, 32, 20, 27, 20)

[node name="CollisionPolygon2DFlip" type="CollisionPolygon2D" parent="."]
position = Vector2(-38, -32)
polygon = PackedVector2Array(39, 12, 28, 36, 24, 36, 19, 30, 21, 26, 17, 24, 14, 30, 24, 44, 28, 44, 29, 49, 35, 56, 38, 56, 38, 58, 56, 58, 66, 50, 66, 32, 55, 12, 50, 21, 45, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_7oxml")

[node name="ChangeStateTimer" type="Timer" parent="."]
autostart = true

[node name="WalkingTimer" type="Timer" parent="."]
autostart = true

[node name="ClickTimer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1, 5)
shape = SubResource("CircleShape2D_co7id")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="WalkingTimer" to="." method="_on_walking_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
